test: added more tests to SecurityQueryUtilsUnitTests