@@ -12,8 +12,10 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -169,7 +171,8 @@ class SecurityQueryUtilsUnitTests {
 		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
 			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
 
-			Map<String, Map<String, Object>> result = SecurityQueryUtils.getUserInfo(List.of("user-1"));
+			Map<String, Map<String, Object>> result = SecurityQueryUtils
+					.getUserInfo(Collections.singletonList("user-1"));
 
 			assertEquals(1, result.size());
 			Map<String, Object> userInfo = result.get("user-1");
@@ -186,5 +189,178 @@ class SecurityQueryUtilsUnitTests {
 			assertEquals("US", userInfo.get("SMSS_USER__COUNTRYCODE"));
 		}
 	}
-}
 
+	@Test
+	void testGetApplicationUserCountReturnsValue() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		IHeadersDataRow rowMock = mock(IHeadersDataRow.class);
+
+		when(wrapperMock.hasNext()).thenReturn(true);
+		when(wrapperMock.next()).thenReturn(rowMock);
+		when(rowMock.getValues()).thenReturn(new Object[] { 7 });
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertEquals(7, SecurityQueryUtils.getApplicationUserCount());
+		}
+	}
+
+	@Test
+	void testUserIsPublisherReturnsTrueWhenEntryExists() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.userIsPublisher(null));
+		}
+	}
+
+	@Test
+	void testUserIsExporterReturnsTrueWhenEntryExists() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.userIsExporter(null));
+		}
+	}
+
+	@Test
+	void testSearchForUserReturnsResultsFromQueryExecutionUtility() {
+		List<Map<String, Object>> expected = new ArrayList<>();
+		Map<String, Object> row = new HashMap<>();
+		row.put("id", "user-1");
+		expected.add(row);
+
+		try (MockedStatic<QueryExecutionUtility> qeu = Mockito.mockStatic(QueryExecutionUtility.class)) {
+			qeu.when(() -> QueryExecutionUtility.flushRsToMap(eq(securityDbMock), any(SelectQueryStruct.class)))
+					.thenReturn(expected);
+
+			List<Map<String, Object>> results = SecurityQueryUtils.searchForUser("user");
+
+			assertSame(expected, results);
+		}
+	}
+
+	@Test
+	void testCheckUserExistByIdReturnsTrueWhenRowFound() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.checkUserExist("user-1"));
+		}
+	}
+
+	@Test
+	void testCheckUserExistByCredentialsReturnsTrueWhenRowFound() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.checkUserExist("username", "user@example.com"));
+		}
+	}
+
+	@Test
+	void testCheckUserEmailExistReturnsTrueWhenRowFound() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.checkUserEmailExist("user@example.com"));
+		}
+	}
+
+	@Test
+	void testCheckUsernameExistReturnsTrueWhenRowFound() throws Exception {
+		IRawSelectWrapper wrapperMock = mock(IRawSelectWrapper.class);
+		when(wrapperMock.hasNext()).thenReturn(true);
+
+		WrapperManager managerMock = mock(WrapperManager.class);
+		when(managerMock.getRawWrapper(eq(securityDbMock), any(SelectQueryStruct.class))).thenReturn(wrapperMock);
+
+		try (MockedStatic<WrapperManager> wm = Mockito.mockStatic(WrapperManager.class)) {
+			wm.when(WrapperManager::getInstance).thenReturn(managerMock);
+
+			assertTrue(SecurityQueryUtils.checkUsernameExist("username"));
+		}
+	}
+
+	@Test
+	void testIsUserTypeReturnsTrueWhenResultFound() {
+		List<String[]> entries = new ArrayList<>();
+		entries.add(new String[] { "Test User" });
+
+		try (MockedStatic<QueryExecutionUtility> qeu = Mockito.mockStatic(QueryExecutionUtility.class)) {
+			qeu.when(() -> QueryExecutionUtility.flushRsToListOfStrArray(eq(securityDbMock),
+					any(SelectQueryStruct.class))).thenReturn(entries);
+
+			assertTrue(SecurityQueryUtils.isUserType("user-1", AuthProvider.GOOGLE));
+		}
+	}
+
+	@Test
+	void testGetUserLockAndLastLoginAndLastPassResetReturnsFirstRow() {
+		Object[] expected = new Object[] { Boolean.TRUE, new SemossDate(LocalDate.of(2024, 1, 1)),
+				new SemossDate(LocalDate.of(2024, 2, 2)) };
+		List<Object[]> rows = new ArrayList<>();
+		rows.add(expected);
+
+		try (MockedStatic<QueryExecutionUtility> qeu = Mockito.mockStatic(QueryExecutionUtility.class)) {
+			qeu.when(() -> QueryExecutionUtility.flushRsToListOfObjArray(eq(securityDbMock),
+					any(SelectQueryStruct.class))).thenReturn(rows);
+
+			Object[] result = SecurityQueryUtils.getUserLockAndLastLoginAndLastPassReset("user-1",
+					AuthProvider.GOOGLE);
+
+			assertSame(expected, result);
+		}
+	}
+
+	@Test
+	void testGetEnginePermissionReturnsFirstResult() {
+		Map<String, Object> permission = new HashMap<>();
+		permission.put("ENGINEPERMISSION__PERMISSION", "READ");
+		List<Map<String, Object>> rows = new ArrayList<>();
+		rows.add(permission);
+
+		try (MockedStatic<QueryExecutionUtility> qeu = Mockito.mockStatic(QueryExecutionUtility.class)) {
+			qeu.when(() -> QueryExecutionUtility.flushRsToMap(eq(securityDbMock), any(SelectQueryStruct.class)))
+					.thenReturn(rows);
+
+			Map<String, Object> result = SecurityQueryUtils.getEnginePermission("user-1", "engine-1");
+
+			assertSame(permission, result);
+		}
+	}
+}
